# Ear-segmentation-ai

./: .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Deploy_ear_segmentation.py  Deploy_ear_segmentation_image.py  Deploy_ear_segmentation_webcam.py  GIT_REPO.md  ISSUE_RESPONSE.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v2.md  REORGANIZATION_PLAN.md  SECURITY.md  SECURITY_UPDATES.md  TODO.md  const.py  earsegmentationai_cli.py  preprocessing.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  release_to_pypi.yml  tests.yml
docs/api/: README.md  cli.md  config.md  image.md  types.md  video.md
docs/development/: BACKEND_ANALYSIS.md  architecture.md
docs/guides/: installation.md  quickstart.md
docs/migration/: MIGRATION.md
docs/project/: CHANGELOG.md  SECURITY.md
earsegmentationai/: __init__.py  camera_mode.py  cameramode.py  const.py  download_model.py  ear_models.py  image_mode.py  imagemode.py  main.py  pre_processing.py  predict_mask.py  preprocessing.py
examples/basic/: basic_usage.py
scripts/benchmarks/: README.md  compare_models.py  profile_memory.py  run_benchmarks.py
scripts/development/: test_backward_compat.py  test_model_download.py
scripts/release/: prepare_release.py
src/earsegmentationai/: __init__.py  __version__.py  compat.py
src/earsegmentationai/api/: base.py  image.py  video.py
src/earsegmentationai/cli/: app.py
src/earsegmentationai/core/: config.py  model.py  predictor.py
src/earsegmentationai/postprocessing/: visualization.py
src/earsegmentationai/preprocessing/: transforms.py  validators.py
src/earsegmentationai/utils/: exceptions.py  logging.py
tests/: conftest.py
tests/integration/: test_api_image.py  test_api_video.py  test_cli.py
tests/unit/: test_config.py  test_model.py  test_predictor.py  test_transforms.py  test_validators.py
