[tool.poetry]
name = "earsegmentationai"
version = "0.1.2"
description = "Pytorch based Ear Detection in picture and camera"
authors = ["Umit KACAR <umitkacar.phd@gmail.com>","Onuralp SEZER <thunderbirdtr@gmail.com>"]
readme = "README.md"
packages = [{include = "earsegmentationai"}]


[tool.poetry.dependencies]
python = "^3.8"
poethepoet = "^0.17.1"
numpy = "1.24.1"
pillow = "9.3.0"
opencv-python = "4.6.0.66"
albumentations = "^1.3.0"
imgviz = "^1.6.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
segmentation-models-pytorch = "^0.3.1"
requests = "^2.28.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
bandit = "^1.7.4"
debugpy = "^1.6.4"
rope = "^1.6.0"
wheel = "^0.38.4"
setuptools = "^65.6.3"
coverage = "^7.0.1"
pre-commit = "^2.21.0"
pyupgrade = "^3.3.1"
types-requests = "^2.28.11.7"


[tool.poe.tasks]
pytorch_cpu = "pip3 install torch torchvision --extra-index-url https://download.pytorch.org/whl/cpu"

[tool.pytest.ini_options]
addopts = "--black --isort --flake8"
flake8-max-line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
